plugins {
	id 'java'
	// ShadowJar
	// https://mvnrepository.com/artifact/com.gradleup.shadow/shadow-gradle-plugin
	id 'com.gradleup.shadow' version '9.5.1'
}

// Getting version
apply from: 'version.gradle'

String version = loadVersion().getVersion()
String mainClassName = 'dev.fileeditor.votl.Main'

repositories {
	// Use Maven Central for resolving dependencies
	mavenCentral()
}

dependencies {
	// JDA library and additions
	// https://mvnrepository.com/artifact/net.dv8tion/JDA
	implementation('net.dv8tion:JDA:6.5.0') {						// JDA library
		exclude module: 'opus-java'
		exclude module: 'tink'
	}
	// https://mvnrepository.com/artifact/ch.qos.logback/logback-classic
	implementation 'ch.qos.logback:logback-classic:1.5.38'			// Logging (required by JDA)

	// Tools
	// https://mvnrepository.com/artifact/com.jayway.jsonpath/json-path
	implementation 'com.jayway.jsonpath:json-path:3.0.0'			// json path-er
	// https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
	implementation 'org.xerial:sqlite-jdbc:3.53.2.0'				// sqlite database
	// https://mvnrepository.com/artifact/org.jsoup/jsoup
	implementation 'org.jsoup:jsoup:1.22.2'							// HTML tools
	// https://mvnrepository.com/artifact/io.github.java-diff-utils/java-diff-utils
	implementation 'io.github.java-diff-utils:java-diff-utils:4.17'	// Diff finder
	// https://mvnrepository.com/artifact/org.json/json
	implementation 'org.json:json:20260522'							// JsonObject
	// https://mvnrepository.com/artifact/com.github.ben-manes.caffeine/caffeine
	implementation 'com.github.ben-manes.caffeine:caffeine:3.2.4'	// Cache
	// https://mvnrepository.com/artifact/org.reflections/reflections
	implementation 'org.reflections:reflections:0.10.2'				// Reflections for auto-load
	// https://mvnrepository.com/artifact/commons-cli/commons-cli
	implementation 'commons-cli:commons-cli:1.11.0'					// CLI arguments

	// Metrics
	// https://mvnrepository.com/artifact/io.github.classgraph/classgraph
	implementation 'io.github.classgraph:classgraph:4.8.184'        // Class lookup
	// https://mvnrepository.com/artifact/org.jfree/jfreechart
	implementation 'org.jfree:jfreechart:1.5.6'						// Charts

	// Eval
	// https://mvnrepository.com/artifact/org.apache.groovy/groovy
	implementation 'org.apache.groovy:groovy:5.0.7'			    	// Groovy - code evaluation

	// Testing
	// Source: https://mvnrepository.com/artifact/org.junit/junit-bom
	testImplementation platform('org.junit:junit-bom:6.1.1')
	// Source: https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter
	testImplementation 'org.junit.jupiter:junit-jupiter'
	// Source: https://mvnrepository.com/artifact/org.junit.platform/junit-platform-launcher
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

java {
	sourceCompatibility = targetCompatibility = JavaVersion.VERSION_25
	toolchain {
		languageVersion.set(JavaLanguageVersion.of(25))
	}
}

// jar's Manifest
tasks.jar {
	enabled = false
}

// ShadowJar + copy to base folder
tasks.register('copyJar') {
	def shadow = tasks.shadowJar
	dependsOn(shadow)
	def outFile = shadow.archiveFile          // captured at config time
	def destName = "VOTL-${version}.jar"
	doLast {
		copy {
			from(outFile)
			into('.')
			rename { destName }
		}
	}
}

// Refresh the root copy whether you run `build` or `shadowJar`
tasks.build {
	dependsOn(copyJar)
}
tasks.shadowJar {
	finalizedBy(copyJar)
}

// ShadowJar config
tasks.shadowJar {
	archiveBaseName = 'VOTL'
	archiveVersion = getFullVersion(version)
	archiveClassifier = ''
	minimize {
		exclude(dependency('ch.qos.logback:logback-classic:.*'))
		exclude(dependency('org.xerial:sqlite-jdbc:.*'))
		exclude(dependency('com.github.ben-manes.caffeine:caffeine:.*'))
		exclude(dependency('org.apache.groovy:groovy:.*'))
	}

	exclude('META-INF/*.SF')
	exclude('META-INF/*.DSA')
	exclude('META-INF/*.RSA')
	exclude('META-INF/LICENSE*')
	exclude('META-INF/NOTICE*')
	exclude('META-INF/DEPENDENCIES')

	manifest {
		attributes 'Implementation-Title': 'VOTL Bot',
				'Implementation-Version': getFullVersion(version),
				'Implementation-Vendor': 'FiLe group',
				'Main-Class': mainClassName
	}
}

tasks.test {
	useJUnitPlatform()

	testLogging {
		events "passed", "skipped", "failed"
	}
}

String getFullVersion(String baseVersion) {
	def sha = project.findProperty("sha") as String
	def isSnapshot = project.hasProperty("snap")

	def fullVersion = baseVersion

	if (isSnapshot) {
		fullVersion += "-SNAPSHOT"
	}
	if (sha != null) {
		fullVersion += "+${sha}"
	}

	// Use this version as the project version
	return fullVersion
}

compileJava.options.encoding = 'UTF-8'
